--- a/index.html
+++ b/index.html
@@ -4,12 +4,74 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Weather App</title>
+    <!DOCTYPE html>
+    <html lang="en">
+      <link rel="stylesheet" href="style.css" />
+      <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Bootstrap demo</title>
+        <link
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+          crossorigin="anonymous"
+        />
+        <script
+          src="https://kit.fontawesome.com/8a0d7ba526.js"
+          crossorigin="anonymous"
+        ></script>
+        <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+      </head>
+      <body class="body-style">
+        <div class="container">
+          <header>The weather today</header>
+          <div class="row">
+            <div class="col-6">
+              <form id="search-form" class="location-bar">
+                <input
+                  type="text"
+                  placeholder="Enter your location"
+                  class="form-location-bar"
+                  id="input-city"
+                />
+                <input type="submit" value="Search" class="form-location-bar" />
+              </form>
+              <button class="current-location-bt" id="current-location">
+                Current Location
+              </button>
+              <div class="temperature">
+                <small class="max-temperature">
+                  <span id="temperature"></span>
+                  <small id="celsius-link"><a href="#"></a> C°</small>
+                </small>
+              </div>
+            </div>
+            <div class="col-6">
+              <h1 id="city"></h1>
+
+              <h2 id="date" class="date">December 5th</h2>
+              <div class="plus-info">
+                <p class="description-info" id="description-line"></p>
+                <p class="humidity-info" id="humidity">Humidity:</p>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="container text-center temperature-grid">
+            <div class="row row-cols-5">
+              <div class="col">day 1</div>
+              <div class="col">Day 2</div>
+              <div class="col">Day 3</div>
+              <div class="col">Day 4</div>
+              <div class="col">Day 5</div>
+            </div>
+          </div>
+        </div>
+
+        <script src="src/index.js"></script>
+      </body>
+    </html>
   </head>
-  <body>
-    <h1>hello git</h1>
-    <form><input type="text" /></form>
-    <script src="script.js"></script>
-  </body>
 </html>
