put the right src to link js

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </div>
         </div>
 
-        <script src="src/index.js"></script>
+        <script src="script.js"></script>
       </body>
     </html>
   </head>
