Added my source code link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
             </div>
           </div>
         </div>
-
+        <a href="https://github.com/EloizaBAB/weather-app"
+          >Open source code by Eloiza Barbosa</a
+        >
         <script src="script.js"></script>
       </body>
     </html>
