added target atribute

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
           </div>
         </div>
-        <a href="https://github.com/EloizaBAB/weather-app"
+        <a href="https://github.com/EloizaBAB/weather-app" target="_blank"
           >Open source code by Eloiza Barbosa</a
         >
         <script src="script.js"></script>
