--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>🌦 Weather App</title>
     <!DOCTYPE html>
     <html lang="en">
-      <link rel="stylesheet" href="style.css" />
+      <link rel="stylesheet" href="src/style.css" />
       <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,24 +23,37 @@
           crossorigin="anonymous"
         ></script>
         <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+        <script
+          src="https://kit.fontawesome.com/8a0d7ba526.js"
+          crossorigin="anonymous"
+        ></script>
       </head>
       <body class="body-style">
         <div class="container">
-          <header>The weather today</header>
+          <button class="current-location-bt" id="current-location">
+            Your current Location
+          </button>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 512 512"
+            class="icon"
+          >
+            <!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+            <path
+              d="M320 64c0-35.3-28.7-64-64-64s-64 28.7-64 64s28.7 64 64 64s64-28.7 64-64zm-96 96c-35.3 0-64 28.7-64 64v48c0 17.7 14.3 32 32 32h1.8l11.1 99.5c1.8 16.2 15.5 28.5 31.8 28.5h38.7c16.3 0 30-12.3 31.8-28.5L318.2 304H320c17.7 0 32-14.3 32-32V224c0-35.3-28.7-64-64-64H224zM132.3 394.2c13-2.4 21.7-14.9 19.3-27.9s-14.9-21.7-27.9-19.3c-32.4 5.9-60.9 14.2-82 24.8c-10.5 5.3-20.3 11.7-27.8 19.6C6.4 399.5 0 410.5 0 424c0 21.4 15.5 36.1 29.1 45c14.7 9.6 34.3 17.3 56.4 23.4C130.2 504.7 190.4 512 256 512s125.8-7.3 170.4-19.6c22.1-6.1 41.8-13.8 56.4-23.4c13.7-8.9 29.1-23.6 29.1-45c0-13.5-6.4-24.5-14-32.6c-7.5-7.9-17.3-14.3-27.8-19.6c-21-10.6-49.5-18.9-82-24.8c-13-2.4-25.5 6.3-27.9 19.3s6.3 25.5 19.3 27.9c30.2 5.5 53.7 12.8 69 20.5c3.2 1.6 5.8 3.1 7.9 4.5c3.6 2.4 3.6 7.2 0 9.6c-8.8 5.7-23.1 11.8-43 17.3C374.3 457 318.5 464 256 464s-118.3-7-157.7-17.9c-19.9-5.5-34.2-11.6-43-17.3c-3.6-2.4-3.6-7.2 0-9.6c2.1-1.4 4.8-2.9 7.9-4.5c15.3-7.7 38.8-14.9 69-20.5z"
+            />
+          </svg>
           <div class="row">
             <div class="col-6">
               <form id="search-form" class="location-bar">
                 <input
                   type="text"
-                  placeholder="Enter your location"
+                  placeholder="Enter a city"
                   class="form-location-bar"
                   id="input-city"
                 />
                 <input type="submit" value="Search" class="form-location-bar" />
               </form>
-              <button class="current-location-bt" id="current-location">
-                Current Location
-              </button>
               <div class="temperature">
                 <small class="max-temperature">
                   <span id="temperature"></span>
@@ -59,7 +72,7 @@
             </div>
           </div>
           <hr />
-          <div class="container text-center temperature-grid">
+          <div class="container text-center temperature-grid weekgrid">
             <div class="row row-cols-5">
               <div class="col">day 1</div>
               <div class="col">Day 2</div>
@@ -69,10 +82,13 @@
             </div>
           </div>
         </div>
-        <a href="https://github.com/EloizaBAB/weather-app" target="_blank"
+        <a
+          href="https://github.com/EloizaBAB/weather-app"
+          target="_blank"
+          class="source-link"
           >Open source code by Eloiza Barbosa</a
         >
-        <script src="script.js"></script>
+        <script src="src/script.js"></script>
       </body>
     </html>
   </head>
