--- a/index.html
+++ b/index.html
@@ -57,17 +57,29 @@
               <div class="temperature">
                 <small class="max-temperature">
                   <span id="temperature"></span>
-                  <small id="celsius-link"><a href="#"></a> C°</small>
+                  <span>C° |</span>
+                  <small id="celsius-link"><a href="#"></a> F</small>
                 </small>
               </div>
             </div>
             <div class="col-6">
               <h1 id="city"></h1>
-
-              <h2 id="date" class="date">December 5th</h2>
-              <div class="plus-info">
-                <p class="description-info" id="description-line"></p>
-                <p class="humidity-info" id="humidity">Humidity:</p>
+              <div class="d-flex weather-temperature">
+                <ul class="plus-info">
+                  <li id="date" class="date">December 5th</li>
+                  <li class="description-info" id="description-line"></li>
+                  <li class="humidity-info" id="humidity">Humidity:</li>
+                </ul>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 640 512"
+                  width="60px"
+                >
+                  <!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                  <path
+                    d="M0 336c0 79.5 64.5 144 144 144H512c70.7 0 128-57.3 128-128c0-61.9-44-113.6-102.4-125.4c4.1-10.7 6.4-22.4 6.4-34.6c0-53-43-96-96-96c-19.7 0-38.1 6-53.3 16.2C367 64.2 315.3 32 256 32C167.6 32 96 103.6 96 192c0 2.7 .1 5.4 .2 8.1C40.2 219.8 0 273.2 0 336z"
+                  />
+                </svg>
               </div>
             </div>
           </div>
