deleted unnecesary info

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <h1 id="city"></h1>
               <div class="d-flex weather-temperature">
                 <ul class="plus-info">
-                  <li id="date" class="date">December 5th</li>
+                  <li id="date" class="date"></li>
                   <li class="description-info" id="description-line"></li>
                   <li class="humidity-info" id="humidity">Humidity:</li>
                 </ul>
