--- a/index.html
+++ b/index.html
@@ -68,12 +68,13 @@
                 <ul class="plus-info">
                   <li id="date" class="date"></li>
                   <li class="description-info" id="description-line"></li>
-                  <li class="humidity-info" id="humidity">Humidity:</li>
+                  <li class="humidity-info" id="humidity">Humidittty:</li>
+                  <li class="wind" id="wind">Windspeed</li>
                 </ul>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 640 512"
-                  width="60px"
+                  width="55px"
                 >
                   <!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
                   <path
