changed grid from week

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <input type="submit" value="Search" class="form-location-bar" />
               </form>
               <div class="temperature">
-                <strong id="temperature" class=""></strong>
+                <strong id="temperature"></strong>
 
                 <small id="units"
                   >C°|<a href="#" id="fahrenheit-link">F</a>
@@ -71,14 +71,12 @@
             </div>
           </div>
           <hr />
-          <div class="container text-center temperature-grid weekgrid">
-            <div class="row row-cols-5">
-              <div class="col">day 1</div>
-              <div class="col">Day 2</div>
-              <div class="col">Day 3</div>
-              <div class="col">Day 4</div>
-              <div class="col">Day 5</div>
-            </div>
+          <div class="row row-cols-5 weekgrid">
+            <div class="col">day 1</div>
+            <div class="col">Day 2</div>
+            <div class="col">Day 3</div>
+            <div class="col">Day 4</div>
+            <div class="col">Day 5</div>
           </div>
         </div>
         <a
