styled form inputs and button

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                   class="form-location-bar"
                   id="input-city"
                 />
-                <input type="submit" value="Search" class="form-location-bar" />
+                <input type="submit" value="🔎" class="form-location-bar" />
               </form>
               <div class="temperature">
                 <strong id="temperature"></strong>
 
-                <small id="units"
-                  >C°|<a href="#" id="fahrenheit-link">F</a>
+                <small id="units" class="celsius"
+                  >C°|<a href="#" id="fahrenheit-link" class="fahrenheit">F</a>
                 </small>
               </div>
             </div>
