--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
           crossorigin="anonymous"
         ></script>
         <link rel="stylesheet" href="src/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+          href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200&family=Raleway:ital@1&display=swap"
+          rel="stylesheet"
+        />
       </head>
       <body class="body-style">
         <div class="container">
