changed(celsius) class name to "units" and added an a reference to build celsius conversion

--- a/index.html
+++ b/index.html
@@ -52,9 +52,13 @@
               </form>
               <div class="temperature">
                 <strong id="temperature"></strong>
-
-                <small id="units" class="celsius"
-                  >C°|<a href="#" id="fahrenheit-link" class="fahrenheit">F</a>
+                <small id="units" class="units"
+                  ><a href="">C°</a> |<a
+                    href="#"
+                    id="fahrenheit-link"
+                    class="fahrenheit"
+                    >F</a
+                  >
                 </small>
               </div>
             </div>
