created the conversionToCelsius function

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <div class="temperature">
                 <strong id="temperature"></strong>
                 <small id="units" class="units"
-                  ><a href="">C°</a> |<a
+                  ><a href="#" id="celsius-link">C°</a> |<a
                     href="#"
                     id="fahrenheit-link"
                     class="fahrenheit"
