weather forecast grid readjustment (html)

--- a/index.html
+++ b/index.html
@@ -81,12 +81,21 @@
             </div>
           </div>
           <hr />
-          <div class="row row-cols-5 weekgrid">
-            <div class="col">day 1</div>
-            <div class="col">Day 2</div>
-            <div class="col">Day 3</div>
-            <div class="col">Day 4</div>
-            <div class="col">Day 5</div>
+          <div class="forecast-grid">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-date">day1</div>
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                  alt=""
+                  width="20px"
+                />
+                <div class="weather-forecast-temperatures">
+                  <span class="weater-forecast-maxtemp">18</span>
+                  <span class="weather-forecast-mintemp">12</span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <a
