created a new function called displayForecast,
the function constains : a  new variable with a row so we can create a grid, created a new variable with an array to loop through each day ,created a new variable forecastHTML so each time we add what we can use same HTML and each time we update the day(concatination), closed the row and put everything inside the #forecast HTML selected

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
           </div>
           <hr />
-          <div class="forecast-grid">
+          <div class="forecast-grid" id="forecast">
             <div class="row">
               <div class="col-2">
                 <div class="weather-forecast-date">day1</div>
