--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
           <div class="forecast-grid" id="forecast">
             <div class="row">
               <div class="col-2">
-                <div class="weather-forecast-date">day1</div>
+                <div class="weather-forecast-date"></div>
                 <img
                   src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
                   alt=""
                   width="20px"
                 />
                 <div class="weather-forecast-temperatures">
-                  <span class="weater-forecast-maxtemp">18</span>
-                  <span class="weather-forecast-mintemp">12</span>
+                  <span class="weater-forecast-maxtemp"></span>
+                  <span class="weather-forecast-mintemp"></span>
                 </div>
               </div>
             </div>
