--- a/index.html
+++ b/index.html
@@ -52,14 +52,7 @@
               </form>
               <div class="temperature">
                 <strong id="temperature"></strong>
-                <small id="units" class="units"
-                  ><a href="#" id="celsius-link">C°</a> |<a
-                    href="#"
-                    id="fahrenheit-link"
-                    class="fahrenheit"
-                    >F</a
-                  >
-                </small>
+                <small id="units" class="units">°C </small>
               </div>
             </div>
             <div class="col-6">
