--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               </form>
               <div class="temperature">
                 <strong id="temperature"></strong>
-                <small id="units" class="units">°C </small>
+                <small>°C </small>
               </div>
             </div>
             <div class="col-6">
@@ -80,8 +80,9 @@
                 <div class="weather-forecast-date"></div>
                 <img
                   src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                  class="forecast-icons"
                   alt=""
-                  width="20px"
+                  width="60px"
                 />
                 <div class="weather-forecast-temperatures">
                   <span class="weater-forecast-maxtemp"></span>
@@ -95,7 +96,7 @@
           href="https://github.com/EloizaBAB/weather-app"
           target="_blank"
           class="source-link"
-          >Open source code by Eloiza Barbosa</a
+          >Open-source code by Eloiza Barbosa</a
         >
         <script src="src/script.js"></script>
       </body>
