changed forecast icons size,added spaces in date

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                   src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
                   class="forecast-icons"
                   alt=""
+                  width="50px"
                 />
                 <div class="weather-forecast-temperatures">
                   <span class="weater-forecast-maxtemp"></span>
