--- a/index.html
+++ b/index.html
@@ -17,16 +17,13 @@
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
           crossorigin="anonymous"
         />
+        <link
+          rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        />
         <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-        <link rel="stylesheet" href="src/style.css" />
-        <link
-          rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-        />
-        <link
-          rel="stylesheet"
-          href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        />
+        <link rel="stylesheet" href="/src/style.css" />
+
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -108,7 +105,7 @@
           class="source-link"
           >Open-source code by Eloiza Barbosa</a
         >
-        <script src="src/script.js"></script>
+        <script src="/src/script.js"></script>
       </body>
     </html>
   </head>
