--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Bootstrap demo</title>
         <link
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-          crossorigin="anonymous"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
         />
         <link
           rel="stylesheet"
@@ -40,7 +38,7 @@
             <div class="col-sm-6"><h1 id="city"></h1></div>
           </div>
           <div class="row">
-            <div class="col">
+            <div class="col-sm-6">
               <form id="search-form" class="location-bar">
                 <input
                   type="text"
@@ -58,8 +56,14 @@
                 <strong id="temperature"></strong>
                 <small>°C </small>
               </div>
+              <img
+                src="http://openweathermap.org/img/wn/10d@2x.png"
+                alt=""
+                id="icon"
+                class="icon"
+              />
             </div>
-            <div class="col">
+            <div class="col-sm-6">
               <div class="d-flex weather-temperature">
                 <ul class="plus-info">
                   <li id="date" class="date"></li>
@@ -67,12 +71,6 @@
                   <li class="humidity-info" id="humidity"></li>
                   <li class="wind" id="wind"></li>
                 </ul>
-                <img
-                  src="http://openweathermap.org/img/wn/10d@2x.png"
-                  alt=""
-                  id="icon"
-                  class="icon"
-                />
               </div>
             </div>
           </div>
@@ -82,7 +80,7 @@
           <div class="row">
             <div class="forecast-grid" id="forecast">
               <div class="row">
-                <div class="col-2">
+                <div class="col">
                   <div class="weather-forecast-date"></div>
                   <img
                     src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
