added background color and box shadow to li . plus-info

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
               <div class="d-flex weather-temperature">
                 <ul class="plus-info">
                   <li id="date" class="date"></li>
-                  <li><h1></h1></li>
+                  <li class="city-info">
+                    Some info on the city you searched for:
+                  </li>
                   <li class="description-info" id="description-line"></li>
                   <li class="humidity-info" id="humidity"></li>
                   <li class="wind" id="wind"></li>
