--- a/teste.html
+++ b/teste.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Weather App</title>
+    <title>🌦 Weather App</title>
+    <meta charset="utf-8" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -14,7 +15,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     />
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="src/style.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,6 +24,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <div class="container text-center">
       <div class="row">
@@ -95,6 +98,6 @@
       class="source-link"
       >Open-source code by Eloiza Barbosa</a
     >
-    <script src="/src/script.js"></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
